--- a/templates/base.html
+++ b/templates/base.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="{% static 'CSS/Register.css' %}">
     <link rel="shortcut icon" href="{% static 'image/Myicon.png' %}">
 
-<title>VCC APP | {% block title %}{% endblock %}</title>
+<title>VCC APP | {% block title %}Home{% endblock %}</title>
 </head>
 
 <body style="background-color: gainsboro">
