--- a/templates/users/About.html
+++ b/templates/users/About.html
@@ -5,7 +5,7 @@
 {% endblock%}
 
 {%block content%}
-    <div class="container " style="text-align: center; padding-bottom: 19vh">
+    <div class="container " style="text-align: center; padding-bottom: 19vh; ">
     <h2>What is Vaccination Card Checker?</h2>
     <p>
         Vaccination Card Checker is a small,
