--- a/templates/users/terms_conditions.html
+++ b/templates/users/terms_conditions.html
@@ -6,7 +6,7 @@
 {% block content %}
     <style>
     body{
-        color: white!important;
+        color: black!important;
     }
     </style>
     <h2><strong>Terms and Conditions</strong></h2>
