--- a/templates/users/Processing.html
+++ b/templates/users/Processing.html
@@ -5,18 +5,17 @@
 <style>
     h1{
         text-align: center;
-        color: white;
+        color: Black;
         margin-top: 50px;
     }
     h3{
         text-align: center;
-        color: white;
         padding-bottom: 8.7em;
     }
 </style>
 
 <h1 >
-Please wait while we check your account information....
+Please wait while we check your information....
 </h1>
 <h3>
 Once we've finished checking, we'll send you an email.
